...
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_toolbar" />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/text_input_rounded_box"
...

        android:layout_marginStart="32dp"
        android:text="Password:"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_username" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="0dp"
...
        android:layout_marginEnd="30dp"
        android:background="@drawable/text_input_rounded_box"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_username"
        app:layout_constraintVertical_bias="0.782" />

...
