...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <!-- Profile Picture Container -->
    <androidx.cardview.widget.CardView
        android:id="@+id/profile_image"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="12dp"
        android:clickable="true"
...
            android:scaleType="centerCrop"
            android:src="@drawable/profile_icon" />
    </androidx.cardview.widget.CardView>

    <!-- Notification Icon -->
    <ImageButton
        android:id="@+id/notification_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
...
        app:layout_constraintTop_toTopOf="@id/home_toolbar"
        app:layout_constraintEnd_toStartOf="@id/profile_image"/>


    <!-- Menu Button -->
    <ImageButton
        android:id="@+id/menu_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="Menu"
...
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/home_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tab_explore"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:padding="12dp"
...
            android:text="FOLLOWED"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tab_myposts"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:padding="12dp"
...
