...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp" />

    <!-- Follow Request Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/follow_request_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="Follow"
        android:textSize="16sp"
        android:background="@drawable/rounded_background"
...
